--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "sequelize": "^5.8.6"
