--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "sequelize": "^5.8.6"
   },
