--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "express-validator": "^6.1.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
